--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -11,10 +11,10 @@
   transition: all 0.6s ease-out; }
 
 @mixin transition-background-color{
-	-webkit-transition: background-color 0.4s linear;
-	-moz-transition: background-color 0.4s linear;
-	-o-transition: background-color 0.4s linear;
-	transition: background-color 0.4s linear;}
+	-webkit-transition: background-color 0.2s linear;
+	-moz-transition: background-color 0.2s linear;
+	-o-transition: background-color 0.2s linear;
+	transition: background-color 0.2s linear;}
 
 @mixin hints-visible{
   .jr{
